--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -35,24 +35,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# To test it\n",
-    "CREATE TABLE githubProject; # In workbench\n",
+    "# Project configuration\n",
     "\n",
-    "mysql -u root -p githubProject < GithubProjectBackUp_init.sql #terminal"
+    "The file that we are going to use to set up the basic structure:\n",
+    "\n",
+    "GitHubScraper/JupyterNotebook/Structure/githubProjectStructure.sql\n",
+    "\n",
+    "from the github repository.\n",
+    "\n",
+    "### Step 1, import the structure\n",
+    "In workbench: \n",
+    "\"Server\" -> \"Data Import\", and then you should select the direction of \"githubProjectStructure.sql\" using the 3 dots and import from self-contained file like in the following image:\n",
+    "\n",
+    "![Javatpoint](./Images/Project_Setup/data_import.png)  \n",
+    "\n",
+    "Then scroll down, and create a new Schema by clicking on the \"New...\" button. Name it: \"githubProject\".\n",
+    "\n",
+    "![Javatpoint](./Images/Project_Setup/create_new_schema.png)  \n",
+    "\n",
+    "Scroll to the bottom, and in the bottom right, click on \"Start import\". If there are no errors, it will transitionate to \"Import progress\" and indicate success.\n",
+    "\n",
+    "Refresh the scehmas:\n",
+    "\n",
+    "![Javatpoint](./Images/Project_Setup/refresh.png)  \n",
+    "\n",
+    "### Step 2, importing the data from the csv files\n",
+    "\n",
+    "Download the csv files [here](https://drive.google.com/drive/folders/1NWhfFss0_M9V_clkcE9TH-Fy3oIEndWV?usp=sharing).\n",
+    "\n",
+    "Selecting the \"githubProject\" scheme, right click and \"Table Data Import Wizard\", with this, we are going to import each csv file to the matching table.\n",
+    "\n",
+    "You have to select the .csv you want to import, for example in this case, the trendVisits.csv\n",
+    "\n",
+    "![Javatpoint](./Images/Project_Setup/file_import.png) \n",
+    "\n",
+    "Then, since you already have the structure, you have to use the existing table that matches with the correct csv file:\n",
+    "\n",
+    "![Javatpoint](./Images/Project_Setup/use_existing.png) \n",
+    "\n",
+    "After that, check that the variables type are correct and import it. Do this for each csv file.\n",
+    "\n",
+    "You can also verify the data by doing this:\n",
+    "\n",
+    "![Javatpoint](./Images/Project_Setup/verify.png) \n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introducció\n",
+    "# Introduction\n",
     "\n",
-    "asdfasdfasdfasdfasddfasdfasdfasdfasdfasdfasdfasdf"
+    "TODO index or sections indicating what are we doing..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +280,7 @@
        "1208   dennybritz         reinforcement-learning  Jupyter Notebook        "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +442,7 @@
        "4                  -1  "
       ]
      },
-     "execution_count": 140,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +531,7 @@
        "4     Luohuayu"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -585,7 +625,7 @@
        "4  1.709455e+09       trekhleb                    210"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +745,7 @@
        "4             npm  chore: postinstall for dependabot template-oss PR  "
       ]
      },
-     "execution_count": 143,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +840,7 @@
        "13         emulation               C++"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +940,7 @@
        "4  1.709539e+09       react        347483      98800"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1047,7 @@
        "4  1.712734e+09  PawanOsman          ChatGPT         410"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,13 +1061,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Closes the connection\n",
     "dataBaseConnection.close() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
