--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -26,9 +26,12 @@
     "%matplotlib inline\n",
     "\n",
     "import pandas as pd\n",
-    "# pip install PyMySQL\n",
+    "# Uncomment the following line to install pymysql\n",
+    "#!pip install PyMySQL\n",
     "import pymysql\n",
-    "import warnings"
+    "import warnings\n",
+    "\n",
+    "# POLARS # <- teacher said that this one is 1000% faster than pandas."
    ]
   },
   {
