Added proposal for data analysis.

--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Input your password Muck23Luck_\n"
@@ -1073,11 +1073,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Analysis\n",
+    "\n",
+    "### Basic statistics\n",
+    "* Distribution of main topics (bar or pie chart). Aka, in what proportion of our studied repos are they treated.\n",
+    "* Distribution of languages (bar or pie chart). Like above.\n",
+    "* Time evolution of interest in topics: repositories per topic, followers per topic.\n",
+    "\n",
+    "### Dimensional reduction for an overview on repositories\n",
+    "What we mean here is to perform a PCA (principal components analysis) in order to able to have an insight on the structre of the whole dataset. We would then color the data points in it depending on the language used, for instance, to see if these groups have similar characteristics and lie close in the dataframe or not.\n",
+    "* Create a dataframe containing all RepositoryVisits data for a certain date for all the studied repositories.\n",
+    "* Perform a standarization on the data (i.e., to prevent some variables such as commits to be far more important than others such as forks).\n",
+    "* Perform a PCA into 2 components on it.\n",
+    "* Plot the results while clustering the points depending on different criteria:\n",
+    "    + mainLanguage\n",
+    "    + topic\n",
+    "\n",
+    "### Open questions\n",
+    "* How to use stars and trends?\n",
+    "* How to use contributions by owners?\n"
+   ]
   }
  ],
  "metadata": {
