--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -574,7 +574,7 @@
     "    trans_mask = np.ndarray((mask.shape[0],mask.shape[1]), np.int32)\n",
     "    for i in range(len(mask)):\n",
     "        trans_mask[i] = list(map(transform_format, mask[i]))\n",
-    "    return trans_mask        "
+    "    return trans_mask"
    ]
   },
   {
@@ -599,6 +599,116 @@
    "source": [
     "stopwords = set(STOPWORDS)\n",
     "# stopwords.update([\"a\"]) # manually add stopwords"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Standarize words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unicodedata\n",
+    "import re\n",
+    "import nltk\n",
+    "\n",
+    "# Els matches d'aquest patró seran substituïts per un espai; serveix principalment per separar signes de puntuació de paraules al voltant\n",
+    "STANDARDIZE_SUBSTITUTION = re.compile(r\"[!\\\"$#%&()*+,\\-./:;<=>?[\\]^_`{|}~]\")\n",
+    "\n",
+    "# Eliminarem espais consecutius\n",
+    "CONSECUTIVE_SPACE_SUBSTITUTION = re.compile(r\"  +\")\n",
+    "\n",
+    "def remove_accents(input_str):\n",
+    "    \"\"\"\n",
+    "    Converteix caràcters accentuats als caràcters base.\n",
+    "    Font: https://stackoverflow.com/a/1207479\n",
+    "    \"\"\"\n",
+    "    nfkd_form = unicodedata.normalize('NFKD', input_str).encode(\"ascii\", \"ignore\")\n",
+    "    return bytes.decode(nfkd_form)\n",
+    "\n",
+    "# Aplicarem lemmatization usant NLTK;\n",
+    "# Substituirà per exemple paraules plurals per la seva forma singular.\n",
+    "lemmatizer = nltk.wordnet.WordNetLemmatizer()\n",
+    "LEMMATIZATION_BLACKLIST = set([\n",
+    "    \"was\",  # No apliquem lemmatization a aquesta paraula, produeix confusió\n",
+    "    \"as\",\n",
+    "])\n",
+    "\n",
+    "WORD_REPLACEMENTS = {\n",
+    "    \"read-me\": \"readme\",\n",
+    "    \"read.me\": \"readme\",\n",
+    "    \"readme.md\": \"readme\"\n",
+    "}\n",
+    "\n",
+    "def standardize(word):\n",
+    "    \"\"\"\n",
+    "    :param word: paraula a estandaritzar\n",
+    "    :return : paraula estandaritzada\n",
+    "    \"\"\"            \n",
+    "    word = word.lower()  # Convertim a lowercase\n",
+    "    word = re.sub(STANDARDIZE_SUBSTITUTION, \" \", word)  # Eliminem simbols\n",
+    "    word = re.sub(\"read-me\", \"readme\", word)  # Manually standarize readme.\n",
+    "    word = re.sub(\"read.me\", \"readme\", word)\n",
+    "    word = re.sub(\"readme.md\", \"readme\", word)\n",
+    "    word = remove_accents(word)  # Eliminem accents, altres combinacions de glyphs addicionals i caràcters que no tenen representació ASCII\n",
+    "\n",
+    "    # Eliminem possesius\n",
+    "    word = word.replace(\"'s\", \"\")\n",
+    "\n",
+    "    # Eliminem hashtags\n",
+    "    word = word.replace(\"#\", \"\")\n",
+    "\n",
+    "    # Eliminem espais consecutius\n",
+    "    word = re.sub(CONSECUTIVE_SPACE_SUBSTITUTION, \" \", word)\n",
+    "    word = word.strip()\n",
+    "\n",
+    "    # Per cada paraula, apliquem lemmatization\n",
+    "    words = word.split(\" \")\n",
+    "    words = [lemmatizer.lemmatize(word) if word not in LEMMATIZATION_BLACKLIST else word for word in words]\n",
+    "\n",
+    "    # Reconstruim la frase\n",
+    "    return \" \".join(words)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standardize(\"thIs a TesT\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standardize(\"readme.md\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_standardize_test_words = [\n",
+    "    \"Testing @here as#Dasd 333232 tests testings gItHUbs testing\",  # tests -> test per lemmatization\n",
+    "    \"Test_ing !!, (asd,as d).\",  # Considerem que underscores separen paraules, però realment no affecta molts tweets\n",
+    "    \"Test łłłł ñaññañ áaaa\",  # Eliminació d'accents i caràcters no estandards\n",
+    "    \"テスト #asdasd arabian, wolves\",\n",
+    "]\n",
+    "\n",
+    "for word in _standardize_test_words:\n",
+    "    print(standardize(word))"
    ]
   },
   {
@@ -660,7 +770,7 @@
     "df_commits_small = df_commits.tail() # only last 5\n",
     "print(df_commits_small.tail().message, \"\\n\")\n",
     "small_text_sample = \" \".join(commit for commit in df_commits_small.message) # concatenate them\n",
-    "print(\"Concatenated text:\", text)\n",
+    "print(\"Concatenated text:\", small_text_sample)\n",
     "image_name = \"first_word_cloud\"\n",
     "word_cloud = WordCloud(stopwords=stopwords, max_font_size=50, max_words=100, background_color=\"black\")"
    ]
@@ -672,6 +782,7 @@
    "outputs": [],
    "source": [
     "text_hyper_small = df_commits[\"message\"][0]\n",
+    "text_hyper_small = standardize(text_hyper_small)\n",
     "\n",
     "image_name = \"first_word_cloud\"\n",
     "word_cloud = WordCloud(stopwords=stopwords, max_font_size=50, max_words=100, background_color=\"black\")\n",
@@ -706,7 +817,7 @@
     "# print(len(all_text.split(' ')))\n",
     "# print(len(pd.unique(all_text.split(' '))))\n",
     "\n",
-    "word_cloud = WordCloud(stopwords=stopwords, colormap='rainbow', mask=word_cloud_mask, max_font_size=30, max_words=10000, background_color=\"#31003C\")\n",
+    "word_cloud = WordCloud(stopwords=stopwords, colormap='rainbow', mask=word_cloud_mask, max_font_size=30, max_words=10000, background_color=\"black\")\n",
     "plot_word_cloud(word_cloud, all_text, True, \"git_mask\")"
    ]
   },
@@ -730,26 +841,128 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "text_hyper_small = df_commits[\"message\"][0]\n",
+    "text_hyper_small = standardize(text_hyper_small)\n",
+    "\n",
+    "image_name = \"first_word_cloud\"\n",
+    "word_cloud = WordCloud(\n",
+    "    stopwords=stopwords,\n",
+    "    max_font_size=50,\n",
+    "    max_words=100,\n",
+    "    background_color=\"black\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_words(df: pd.DataFrame):\n",
+    "    \"\"\"\n",
+    "    :param df: DataFrame with the messages and associated information\n",
+    "    :return: Dictionary with the format {word: {n_ocur: value, n_messages: value}, ...}\n",
+    "    \"\"\"\n",
+    "    # Using defaultdict for convenience; we won't have to add keys explicitly\n",
+    "    dicc = defaultdict(lambda: {\"n_ocur\": 0, \"n_messages\": 0})\n",
+    "\n",
+    "    total_rows = len(df)\n",
+    "    processed_rows_count = 0\n",
+    "    for row in df.iterrows():\n",
+    "        text = row[1][0]\n",
+    "        text = standardize(text)  # Apply standardization\n",
+    "        if any(char.isdigit() for char in text):\n",
+    "            continue\n",
+    "        # Count the words\n",
+    "        words = text.split(\" \")\n",
+    "        unique_words = set(words)\n",
+    "        # Times that a word appears and times that appears in different messages.\n",
+    "        for word in words:\n",
+    "            dicc[word][\"n_ocur\"] += 1\n",
+    "        for word in unique_words:\n",
+    "            dicc[word][\"n_messages\"] += 1\n",
+    "\n",
+    "        processed_rows_count += 1\n",
+    "        # print(f\"Word {processed_rows_count}/{total_rows} done; {processed_rows_count / total_rows * 100:.2f}%\")\n",
+    "    \n",
+    "    return dicc\n",
+    "\n",
+    "frame = {'Messages': df_commits.message}\n",
+    "\n",
+    "result = pd.DataFrame(frame)\n",
+    "\n",
+    "ocurrencesDict = count_words(result)\n",
+    "\n",
+    "# Sort the words by occurrences and occurrences in messages.\n",
+    "def obtain_top_n_words(dictionary, N, filter=\"n_ocur\", desc=True):\n",
+    "    # Get all the words and their frequency\n",
+    "    filtered_words = [(word, freq[filter]) for word, freq in dictionary.items() if word not in stopwords]\n",
+    "    \n",
+    "    # Sort from most to least frequent\n",
+    "    sorted_words = sorted(filtered_words, key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    # Take the N most frequent\n",
+    "    return [(word, freq) for word, freq in sorted_words[:N]]\n",
+    "\n",
+    "top_words_list_ocur = obtain_top_n_words(ocurrencesDict, 30, \"n_ocur\", True)\n",
+    "top_words_list_msg = obtain_top_n_words(ocurrencesDict, 30, \"n_messages\", True)\n",
+    "\n",
+    "print(\"Ocurrences Top\", top_words_list_ocur)\n",
+    "print(\"Ocurrences per message Top\", top_words_list_msg)\n",
+    "\n",
+    "# Function to plot the top words\n",
+    "def plot_top_words(topList, yLabel, ax):\n",
+    "    x = [word for word, freq in topList]\n",
+    "    y = [freq for word, freq in topList]\n",
+    "    \n",
+    "    # Making the bar chart on the data\n",
+    "    ax.bar(x, y)\n",
+    "    \n",
+    "    # Giving title to the plot\n",
+    "    ax.set_title(\"Top used words\")\n",
+    "    ax.set_xticks(x)\n",
+    "    ax.set_xticklabels(x, rotation=90, ha='right')\n",
+    "    # Giving X and Y labels\n",
+    "    ax.set_xlabel(\"Word\")\n",
+    "    ax.set_ylabel(yLabel)\n",
+    "     \n",
+    "    # We do not call plt.show() here, as we want to show both plots together\n",
+    "\n",
+    "# Create a figure with two subplots\n",
+    "fig, axs = plt.subplots(1, 2, figsize=(15, 7))\n",
+    "\n",
+    "# Plot the top words by occurrences\n",
+    "plot_top_words(top_words_list_ocur, \"Occurrences of word\", axs[0])\n",
+    "\n",
+    "# Plot the top words by occurrences in different messages\n",
+    "plot_top_words(top_words_list_msg, \"Occurrences of word in different messages\", axs[1])\n",
+    "\n",
+    "# Adjust layout for better spacing\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plots\n",
+    "plt.show()\n",
+    "\n",
+    "# We can see that there is no significant difference, since normally, in a commit message, we do not repeat the same word twice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Use freqüent items to seek for data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Here goes some grafics bars"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Could explore the wordcloud of specific projects too:\n",
-    "#TODO"
-   ]
   }
  ],
  "metadata": {
