Add frequent items analisis (basic)

--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -949,12 +949,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use freqüent items to seek for the different word groups."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Use freqüent items to seek for data."
+    "# TODO, comment more"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame = {'Messages': df_commits.message}\n",
+    "\n",
+    "result = pd.DataFrame(frame)\n",
+    "print(len(result))\n",
+    "result.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#https://rasbt.github.io/mlxtend/user_guide/frequent_patterns/apriori/#apriori-frequent-itemsets-via-the-apriori-algorithm\n",
+    "def generate_data_set(df: pd.DataFrame, rmStopWords = True, useStandard = True):\n",
+    "    \"\"\"\n",
+    "    :param df: DataFrame with the messages and associated information\n",
+    "    :return dataSet: The message of the commit is the transaction and the words the items.\n",
+    "    \"\"\"\n",
+    "    data_set = []\n",
+    "    total_rows = len(df)\n",
+    "    processed_rows_count = 0\n",
+    "    for row in df.iterrows():\n",
+    "        text = row[1][0]\n",
+    "        if (useStandard):\n",
+    "            text = standardize(text)  # Apply standardization\n",
+    "       \n",
+    "        # Split the words, but don't hold digits.\n",
+    "        words = [word for word in text.split() if not any(char.isdigit() for char in word)]\n",
+    "        if (rmStopWords):\n",
+    "            unique_words = list(set(words) - stopwords)\n",
+    "        else:\n",
+    "            unique_words = list(set(words))\n",
+    "        data_set.append(unique_words)\n",
+    "\n",
+    "        processed_rows_count += 1\n",
+    "        # print(f\"Word {processed_rows_count}/{total_rows} done; {processed_rows_count / total_rows * 100:.2f}%\")\n",
+    "    return data_set\n",
+    "data_set = generate_data_set(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from mlxtend.preprocessing import TransactionEncoder\n",
+    "from mlxtend.frequent_patterns import apriori\n",
+    "import math\n",
+    "#!pip install mlxtend\n",
+    "\n",
+    "def get_frequent_itemsets(data, min_supp = 0.01):\n",
+    "    \"\"\"\n",
+    "    To save memory, you may want to represent your transaction data in the sparse format. \n",
+    "    This is especially useful if you have lots of products and small transactions.\n",
+    "    \"\"\"\n",
+    "    te = TransactionEncoder()\n",
+    "    oht_ary = te.fit(data).transform(data, sparse=True)\n",
+    "    sparse_df = pd.DataFrame.sparse.from_spmatrix(oht_ary, columns=te.columns_)\n",
+    "    \n",
+    "    # total message * support = number of messages which the bundle appears.\n",
+    "    print(\"We consider that at least the bundle appears in:\", math.ceil(len(data) * min_supp), \" messages\")\n",
+    "    \n",
+    "    # Calculate it using apriori algorithm\n",
+    "    frequent_itemsets = apriori(sparse_df, min_support=min_supp, use_colnames=True, verbose=1)\n",
+    "    frequent_itemsets['length'] = frequent_itemsets['itemsets'].apply(lambda x: len(x))\n",
+    "    return frequent_itemsets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frequent_itemsets = get_frequent_itemsets(data_set)\n",
+    "# Sort them from more length and then support\n",
+    "frequent_itemsets_sorted = frequent_itemsets.sort_values(by=['length', 'support'], ascending=[False, False])\n",
+    "print(frequent_itemsets_sorted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_itemsets(data, title):\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.bar(data['itemsets'].astype(str), data['support'] * 100, color='skyblue')\n",
+    "    plt.xlabel('Itemsets')\n",
+    "    plt.ylabel('Support %')\n",
+    "    plt.title(title)\n",
+    "    plt.xticks(rotation=45, ha='right')\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_len_one = frequent_itemsets[(frequent_itemsets['length'] == 1)]\n",
+    "data_len_one['itemsets'] = data_len_one['itemsets'].apply(lambda x: str(sorted(list(x))))\n",
+    "data_len_one = data_len_one.sort_values(by=['support'], ascending=False)\n",
+    "\n",
+    "plot_itemsets(data_len_one, 'Support of Frequent Itemsets of Length 1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_group = frequent_itemsets[(frequent_itemsets['length'] >= 2)]\n",
+    "data_group['itemsets'] = data_group['itemsets'].apply(lambda x: str(sorted(list(x))))\n",
+    "data_group = data_group.sort_values(by=['length'], ascending=False)\n",
+    "\n",
+    "plot_itemsets(data_group, 'Support of Frequent Itemsets from larger to smaller')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO, maybe lower the minsupport even more to see strange connections"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Frequent items, but we want to also see the stopwords usage or the verbal tense used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_set_no_standard = generate_data_set(result, rmStopWords = False, useStandard = False)\n",
+    "frequent_itemsets = get_frequent_itemsets(data_set_no_standard)\n",
+    "# Sort them from more length and then support\n",
+    "frequent_itemsets_sorted = frequent_itemsets.sort_values(by=['length', 'support'], ascending=[False, False])\n",
+    "print(frequent_itemsets_sorted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO, maybe lower the minsupport even more to see strange connections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_set_no_standard = generate_data_set(result, rmStopWords = False, useStandard = False)\n",
+    "frequent_itemsets = get_frequent_itemsets(data_set_no_standard, min_supp = 0.005) # Warning, if you go too low, it will crash, your pc can't handle it...\n",
+    "# Sort them from more length and then support\n",
+    "frequent_itemsets_sorted = frequent_itemsets.sort_values(by=['length', 'support'], ascending=[False, False])\n",
+    "print(frequent_itemsets_sorted)"
    ]
   },
   {
