Add stars, contributors and avatar URLs to data exported for the website

--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -181,19 +181,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"\n",
-    "SELECT r.owner, r.name, r.mainLanguage, MAX(stars) as total_stars, MAX(contributors) as total_contributors, MAX(openPullRequests + closedPullRequests) as total_prs, MAX(openIssues + closedIssues) as total_issues, MAX(watchers) as total_watchers, MAX(stars) as total_stars FROM Repositories r\n",
+    "open_source_projects_query = \"\"\"\n",
+    "SELECT r.owner, r.name, r.mainLanguage, r.license, MAX(stars) as total_stars, MAX(contributors) as total_contributors, MAX(openPullRequests + closedPullRequests) as total_prs, MAX(openIssues + closedIssues) as total_issues, MAX(watchers) as total_watchers, MAX(stars) as total_stars FROM Repositories r\n",
     "JOIN RepositoryVisits v\n",
     "ON r.owner = v.owner AND r.name = v.name\n",
-    "GROUP BY r.owner, r.name, r.mainLanguage\n",
+    "GROUP BY r.owner, r.name, r.mainLanguage, r.license\n",
     "HAVING total_contributors > 5 AND total_issues > 50\n",
     "ORDER BY total_contributors DESC;\n",
     "\"\"\"\n",
     "\n",
-    "output_repo, df_repo = execute_select_query(cursor, query)\n",
+    "output_repo, df_repo = execute_select_query(cursor, open_source_projects_query)\n",
     "print(len(df_repo), \"repositories matching criteria\")\n",
     "df_repo.head(100)\n",
-    "# TODO require lates commit to be recent\n",
+    "# TODO require latest commit to be recent?\n",
     "# TODO store license as well\n",
     "\n",
     "# TODO also search for info/resource repositories"
@@ -215,18 +215,27 @@
     "# Renames or discards languages.\n",
     "LANGUAGE_REMAP = {\n",
     "    \"TypeScript\": \"JavaScript\",\n",
+    "    \"Vue\": \"JavaScript\",\n",
+    "    \"HTML\": \"JavaScript\", # Bruh\n",
+    "    \"Jupyter Notebook\": \"Python\",\n",
+    "    \"Kotlin\": \"Java & Kotlin\",\n",
+    "    \"Java\": \"Java & Kotlin\",\n",
     "    \"C\": \"C/C++\",\n",
     "    \"C++\": \"C/C++\",\n",
-    "    \"Rust\": \"Others\",\n",
     "    \"Ruby\": \"Others\",\n",
     "    \"Go\": \"Others\",\n",
     "    \"Swift\": \"Others\",\n",
     "    \"Clojure\": \"Others\",\n",
     "    \"Haskell\": \"Others\",\n",
+    "    \"Dart\": \"Others\",\n",
+    "    \"Shell\": \"Others\",\n",
+    "    \"PowerShell\": \"Others\",\n",
+    "    \"Scala\": \"Others\",\n",
+    "    \"Svelte\": \"Others\",\n",
     "    \"Vim Script\": \"\",\n",
     "    \"CSS\": \"\",\n",
+    "    \"SCSS\": \"\",\n",
     "    \"MDX\": \"\",\n",
-    "    \"Shell\": \"\",\n",
     "}\n",
     "\n",
     "used_languages = set()\n",
@@ -241,6 +250,8 @@
     "    oss_repos[key] = {\n",
     "        \"topics\": set(),\n",
     "        \"languages\": set([main_language] if main_language != \"\" else []),\n",
+    "        \"stars\": row[\"total_stars\"][1],\n",
+    "        \"contributors\": row[\"total_contributors\"],\n",
     "    }\n",
     "    used_languages.add(main_language)\n",
     "\n",
@@ -251,7 +262,7 @@
     "    \"Modding\": [\"mod\", \"minecraft\", \"emulation\", \"emulator\", \"forge\", \"minecraft-launcher\", \"modrinth\", \"minecraft-api\", \"minecraft-server\", \"bepinex\", \"unity3d\", \"unreal\", \"unity-mono\", \"craftbukkit\", \"valheim\", \"minecraft-mod\", \"gta5\", \"fabric\"],\n",
     "    \"Data Science\": [\"math\", \"numpy\", \"data-science\", \"graphql\", \"data-visualization\", \"jupyter-notebook\"],\n",
     "    \"Machine Learning\": [\"ml\", \"pytorch\", \"deep-learning\", \"machine-learning\", \"deep-neural-networks\", \"tensorflow\", \"neural-network\", \"tensor\", \"computer-vision\", \"reinforcement-learning\", \"hyperparameter-tuning\", \"ai\", \"artificial-intelligence\", \"llama\", \"llms\", \"llm\"],\n",
-    "    \"Tool\": [\"containers\", \"zsh\", \"docker\", \"github\", \"cli\", \"searchengine\", \"postgrest\", \"devtool\", \"cloudstorage\", \"git\", \"npm\", \"database\", \"postgresql\", \"backend\", \"shell-scripting\", \"websocket\", \"collaboration\"],\n",
+    "    \"Tool\": [\"containers\", \"zsh\", \"docker\", \"github\", \"cli\", \"searchengine\", \"postgrest\", \"devtool\", \"cloudstorage\", \"git\", \"npm\", \"database\", \"postgresql\", \"backend\", \"shell-scripting\", \"websocket\", \"collaboration\", \"developer-tools\", \"promise\", \"api\", \"testing\", \"translation\", \"i18n\"],\n",
     "    \"App\": [\"note-taking\", \"productivity\", \"prest\", \"download\", \"latex\", \"text-editor\", \"curl\", \"ftp\", \"bot\", \"synchronization\", \"sqlite\", \"mattermost\", \"messaging\", \"conferencing\", \"remote-desktop\"],\n",
     "\n",
     "    \"Resource\": [\"learn-to-code\", \"freecodecamp\", \"curriculum\", \"certification\", \"learnopengl\", \"lists\", \"resources\", \"resource\", \"dataset\", \"public-api\", \"public-apis\"],\n",
@@ -264,6 +275,7 @@
     "    \"yjs/yjs\": [\"Tool\"],\n",
     "    \"TigerVNC/tigervnc\": [\"Tool\"],\n",
     "    \"ollama/ollama\": [\"App\"],\n",
+    "    \"micropython/micropython\": [\"Tool\"], # Python implementation\n",
     "}\n",
     "for tag,aliases in TAG_ALIASES.items():\n",
     "    for alias in aliases:\n",
@@ -273,7 +285,9 @@
     "IGNORED_TAGS = defaultdict(int)\n",
     "import json\n",
     "with open(\"../persistence.json\", \"r\") as f:\n",
-    "    repos_data = json.load(f)[\"repositories\"]\n",
+    "    json_data = json.load(f)\n",
+    "    repos_data = json_data[\"repositories\"]\n",
+    "    users_data = json_data[\"owners\"]\n",
     "\n",
     "    for key,repo in oss_repos.items():\n",
     "        repo[\"description\"] = repos_data[key][\"description\"]\n",
@@ -286,6 +300,10 @@
     "            for tag in MANUAL_TAGS[key]:\n",
     "                repo[\"topics\"].add(tag)\n",
     "\n",
+    "        username = key.split(\"/\")[0]\n",
+    "        if username in users_data:\n",
+    "            repo[\"icon\"] = users_data[username][\"avatar_url\"]\n",
+    "\n",
     "        for tag in repo[\"topics\"]:\n",
     "            used_tags.add(tag)\n",
     "\n",
@@ -294,6 +312,7 @@
     "del oss_repos[\"qemu/qemu\"]\n",
     "del oss_repos[\"xasset/xasset\"] # Not english.\n",
     "del oss_repos[\"jynew/jynew\"] # Unity RPG game framework, documentation in chinese-only though.\n",
+    "del oss_repos[\"doocs/advanced-java\"] # Java interview questions, chinese-only.\n",
     "\n",
     "for key,repo in oss_repos.items():\n",
     "    if len(repo[\"topics\"]) == 0:\n",
