Notebook: cleanup repository data export for website, add comments and improve query

--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -169,10 +169,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Open Source Projects\n",
-    "Repositories with criteria that indicates being not just a public repository, but a project open to contributions.\n",
+    "# Repositoris \"Open Source\" & dades per a la pàgina web\n",
+    "Quant a l'objectiu de destacar repositoris open-source (i no només repositoris populars, com fa GitHub), volem exportar dades d'aquests repositoris en format `.json` per a que puguin ser usades per la pàgina web.\n",
     "\n",
-    "Ordered by descending contributors count."
+    "Considerem que repositoris són projectes open-source si tenen més de 5 contribuïdors i més de 50 issues en total - un criteri simple però efectiu.\n",
+    "\n",
+    "Recollir les dades necessàries involucra fer JOINs amb múltiples taules."
    ]
   },
   {
@@ -182,28 +184,43 @@
    "outputs": [],
    "source": [
     "open_source_projects_query = \"\"\"\n",
-    "SELECT r.owner, r.name, r.mainLanguage, r.license, MAX(stars) as total_stars, MAX(contributors) as total_contributors, MAX(openPullRequests + closedPullRequests) as total_prs, MAX(openIssues + closedIssues) as total_issues, MAX(watchers) as total_watchers, MAX(stars) as total_stars FROM Repositories r\n",
+    "SELECT r.owner, r.name, r.description, r.mainLanguage,\n",
+    "MAX(stars) as total_stars, MAX(contributors) as total_contributors, MAX(openIssues + closedIssues) as total_issues,\n",
+    "o.avatar_url, GROUP_CONCAT(DISTINCT t.topic) as topics,\n",
+    "MAX(watchers) as total_watchers FROM Repositories r\n",
+    "-- Join with RepositoryVisits to get metrics like contributors, stars, issues amount\n",
     "JOIN RepositoryVisits v\n",
     "ON r.owner = v.owner AND r.name = v.name\n",
-    "GROUP BY r.owner, r.name, r.mainLanguage, r.license\n",
+    "-- Join with Owners to get the avatar URL\n",
+    "JOIN Owners o\n",
+    "ON r.owner = o.username\n",
+    "-- Join with RepositoryTopics to get a list of the tags/topics of the repos\n",
+    "JOIN RepositoryTopics t\n",
+    "ON t.repo = r.name AND t.owner = r.owner\n",
+    "GROUP BY r.owner, r.name, r.mainLanguage, r.license -- Must group by mainLanguage and license as well as they're non-aggregated\n",
     "HAVING total_contributors > 5 AND total_issues > 50\n",
-    "ORDER BY total_contributors DESC;\n",
+    "ORDER BY total_contributors DESC; -- Show repos with most contributors first\n",
     "\"\"\"\n",
     "\n",
     "output_repo, df_repo = execute_select_query(cursor, open_source_projects_query)\n",
     "print(len(df_repo), \"repositories matching criteria\")\n",
-    "df_repo.head(100)\n",
-    "# TODO require latest commit to be recent?\n",
-    "# TODO store license as well\n",
-    "\n",
-    "# TODO also search for info/resource repositories"
+    "df_repo.head(100)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data of these repositories is then extracted to a `.json` for the website to use:"
+    "Les dades d'aquests repositoris s'exporten a .json perque puguin ser usades per la pàgina web.\n",
+    "\n",
+    "En aquest procés també categoritzem els repositoris segons les seves temàtiques generals:\n",
+    "- Desenvolupament web\n",
+    "- Data science\n",
+    "- Aplicacions\n",
+    "- Eines de desenvolupament\n",
+    "- Repositoris de recursos (ex. una col·lecció d'algorismes)\n",
+    "\n",
+    "La categorització es fa segons els \"topics\" (tags) que tenen els repositoris. Els repositoris també es categoritzen pel seu llenguatge de programació principal."
    ]
   },
   {
@@ -212,7 +229,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import defaultdict\n",
+    "import json\n",
+    "\n",
+    "used_languages = set()\n",
+    "used_tags = set()\n",
+    "\n",
     "# Renames or discards languages.\n",
+    "# Used to group up frameworks, variants and transpilers.\n",
     "LANGUAGE_REMAP = {\n",
     "    \"TypeScript\": \"JavaScript\",\n",
     "    \"Vue\": \"JavaScript\",\n",
@@ -238,34 +262,19 @@
     "    \"MDX\": \"\",\n",
     "}\n",
     "\n",
-    "used_languages = set()\n",
-    "used_tags = set()\n",
-    "\n",
-    "oss_repos = {}\n",
-    "for index, row in df_repo.iterrows():\n",
-    "    key = row[\"owner\"] + \"/\" + row[\"name\"]\n",
-    "    main_language = row[\"mainLanguage\"]\n",
-    "    if main_language in LANGUAGE_REMAP:\n",
-    "        main_language = LANGUAGE_REMAP[main_language]\n",
-    "    oss_repos[key] = {\n",
-    "        \"topics\": set(),\n",
-    "        \"languages\": set([main_language] if main_language != \"\" else []),\n",
-    "        \"stars\": row[\"total_stars\"][1],\n",
-    "        \"contributors\": row[\"total_contributors\"],\n",
-    "    }\n",
-    "    used_languages.add(main_language)\n",
-    "\n",
     "# Remaps GitHub topics to the tags that are used in the website.\n",
     "TAG_MAP = {}\n",
+    "# Maps tags used by the website to a list of Github \"topics\" that will be considered as the same tag.\n",
+    "# Ex. repos with topics \"react\", \"vue\" become tagged as \"Web\"\n",
     "TAG_ALIASES = {\n",
-    "    \"Web\": [\"react\", \"vue\", \"web\", \"reactjs\", \"css\", \"chrome-extension\", \"react-grid\", \"react-table\", \"php\", \"http\"],\n",
-    "    \"Modding\": [\"mod\", \"minecraft\", \"emulation\", \"emulator\", \"forge\", \"minecraft-launcher\", \"modrinth\", \"minecraft-api\", \"minecraft-server\", \"bepinex\", \"unity3d\", \"unreal\", \"unity-mono\", \"craftbukkit\", \"valheim\", \"minecraft-mod\", \"gta5\", \"fabric\"],\n",
-    "    \"Data Science\": [\"math\", \"numpy\", \"data-science\", \"graphql\", \"data-visualization\", \"jupyter-notebook\"],\n",
-    "    \"Machine Learning\": [\"ml\", \"pytorch\", \"deep-learning\", \"machine-learning\", \"deep-neural-networks\", \"tensorflow\", \"neural-network\", \"tensor\", \"computer-vision\", \"reinforcement-learning\", \"hyperparameter-tuning\", \"ai\", \"artificial-intelligence\", \"llama\", \"llms\", \"llm\"],\n",
-    "    \"Tool\": [\"containers\", \"zsh\", \"docker\", \"github\", \"cli\", \"searchengine\", \"postgrest\", \"devtool\", \"cloudstorage\", \"git\", \"npm\", \"database\", \"postgresql\", \"backend\", \"shell-scripting\", \"websocket\", \"collaboration\", \"developer-tools\", \"promise\", \"api\", \"testing\", \"translation\", \"i18n\"],\n",
-    "    \"App\": [\"note-taking\", \"productivity\", \"prest\", \"download\", \"latex\", \"text-editor\", \"curl\", \"ftp\", \"bot\", \"synchronization\", \"sqlite\", \"mattermost\", \"messaging\", \"conferencing\", \"remote-desktop\"],\n",
+    "    \"Web\": [\"react\", \"vue\", \"web\", \"reactjs\", \"css\", \"chrome-extension\", \"react-grid\", \"react-table\", \"php\", \"http\", \"nodejs\", \"typescript\", \"electron\", \"search-engine\", \"webgl\", \"rest\", \"rest-api\", \"swagger\", \"static-site-generator\", \"blog-engine\", \"router\", \"webview\", \"jquery\", \"http-client\", \"website\", \"reactive-templates\", \"nuxt\", \"nat\", \"javascript\", \"http2\", \"nginx\", \"apache\", \"aws\", \"api-gateway\", \"jekyll\", \"bootstrap\"],\n",
+    "    \"Modding\": [\"mod\", \"minecraft\", \"emulation\", \"emulator\", \"forge\", \"minecraft-launcher\", \"modrinth\", \"minecraft-api\", \"minecraft-server\", \"bepinex\", \"unity3d\", \"unreal\", \"unity-mono\", \"craftbukkit\", \"valheim\", \"minecraft-mod\", \"gta5\", \"fabric\", \"gamedev\", \"retroarch\", \"game\"],\n",
+    "    \"Data Science\": [\"math\", \"numpy\", \"data-science\", \"graphql\", \"data-visualization\", \"jupyter-notebook\", \"big-data\"],\n",
+    "    \"Machine Learning\": [\"ml\", \"pytorch\", \"deep-learning\", \"machine-learning\", \"deep-neural-networks\", \"tensorflow\", \"neural-network\", \"tensor\", \"computer-vision\", \"reinforcement-learning\", \"hyperparameter-tuning\", \"ai\", \"artificial-intelligence\", \"llama\", \"llms\", \"llm\", \"openai\"],\n",
+    "    \"Tool\": [\"containers\", \"zsh\", \"docker\", \"github\", \"cli\", \"searchengine\", \"postgrest\", \"devtool\", \"cloudstorage\", \"git\", \"npm\", \"database\", \"postgresql\", \"backend\", \"shell-scripting\", \"websocket\", \"collaboration\", \"developer-tools\", \"promise\", \"api\", \"testing\", \"translation\", \"i18n\", \"language\", \"golang-library\", \"algorithm\", \"firmware\", \"style-linter\", \"linting\", \"converter\", \"blockchain\", \"wordpress\", \"static-site-generator\", \"blog-engine\", \"material\", \"material-design\", \"framework\", \"argument-parser\", \"command-line-parser\", \"readme-generator\", \"ssh\", \"backup\", \"reverse-engineering\", \"animation\", \"sdk\", \"devops\", \"jenkins\", \"documentation\", \"terminal\", \"encryption\", \"scrapers\", \"3d-printing\", \"reactive-templates\", \"image-optimization\", \"file-server\", \"nat\", \"proxy\", \"shell\", \"linters\", \"git-client\", \"raspberry-pi\", \"blogging\", \"npm-cli\", \"aws\", \"api-gateway\", \"decompiler\", \"kubernetes\", \"tools\"],\n",
+    "    \"App\": [\"note-taking\", \"productivity\", \"prest\", \"download\", \"latex\", \"text-editor\", \"curl\", \"ftp\", \"bot\", \"synchronization\", \"sqlite\", \"mattermost\", \"messaging\", \"conferencing\", \"remote-desktop\", \"emacs\", \"color-picker\", \"cli-app\", \"subtitle-downloader\", \"decompiler\", \"mobile-app\"],\n",
     "\n",
-    "    \"Resource\": [\"learn-to-code\", \"freecodecamp\", \"curriculum\", \"certification\", \"learnopengl\", \"lists\", \"resources\", \"resource\", \"dataset\", \"public-api\", \"public-apis\"],\n",
+    "    \"Resource\": [\"learn-to-code\", \"freecodecamp\", \"curriculum\", \"certification\", \"learnopengl\", \"lists\", \"resources\", \"resource\", \"dataset\", \"public-api\", \"public-apis\", \"practice\", \"interview\", \"styleguide\", \"list\", \"interview-questions\", \"awesome-list\", \"principles\", \"design-patterns\"],\n",
     "}\n",
     "# Tags manually added to some repositories (which otherwise lack descriptive ones)\n",
     "MANUAL_TAGS = {\n",
@@ -276,53 +285,69 @@
     "    \"TigerVNC/tigervnc\": [\"Tool\"],\n",
     "    \"ollama/ollama\": [\"App\"],\n",
     "    \"micropython/micropython\": [\"Tool\"], # Python implementation\n",
+    "    \"raspberrypi/linux\": [\"App\"],\n",
+    "    \"rust-lang/rust\": [\"Tool\"],\n",
+    "    \"home-assistant/core\": [\"Tool\"],\n",
+    "    \"vuejs/vue-cli\": [\"Tool\", \"Web\"],\n",
+    "    \"remix-run/remix\": [\"Tool\", \"Web\"],\n",
+    "}\n",
+    "# Same thing as above, but mapping tag to list of repos with it instead, as I realized at the end this would've been more convenient.\n",
+    "MANUAL_TAGS2 = {\n",
+    "    \"Tool\": [\"pytorch/tutorials\", \"vuejs/core\", \"google/googletest\", \"google/guava\", \"ReactiveX/RxJava\"],\n",
+    "    \"Web\": [\"vuejs/core\"],\n",
+    "    \"App\": [\"square/retrofit\"],\n",
     "}\n",
     "for tag,aliases in TAG_ALIASES.items():\n",
     "    for alias in aliases:\n",
     "        TAG_MAP[alias] = tag\n",
+    "for tag,repos in MANUAL_TAGS2.items():\n",
+    "    for repo in repos:\n",
+    "        if repo in MANUAL_TAGS:\n",
+    "            MANUAL_TAGS[repo].append(tag)\n",
+    "        else:\n",
+    "            MANUAL_TAGS[repo] = [tag]\n",
     "\n",
-    "from collections import defaultdict\n",
     "IGNORED_TAGS = defaultdict(int)\n",
-    "import json\n",
-    "with open(\"../persistence.json\", \"r\") as f:\n",
-    "    json_data = json.load(f)\n",
-    "    repos_data = json_data[\"repositories\"]\n",
-    "    users_data = json_data[\"owners\"]\n",
     "\n",
-    "    for key,repo in oss_repos.items():\n",
-    "        repo[\"description\"] = repos_data[key][\"description\"]\n",
-    "        for tag in repos_data[key][\"tags\"]:\n",
-    "            if tag in TAG_MAP:\n",
-    "                repo[\"topics\"].add(TAG_MAP[tag])\n",
-    "            else:\n",
-    "                IGNORED_TAGS[tag] += 1\n",
+    "oss_repos = {}\n",
+    "for index, row in df_repo.iterrows():\n",
+    "    key = row[\"owner\"] + \"/\" + row[\"name\"]\n",
+    "    main_language = row[\"mainLanguage\"]\n",
+    "    if main_language in LANGUAGE_REMAP:\n",
+    "        main_language = LANGUAGE_REMAP[main_language]\n",
+    "    repo = {\n",
+    "        \"topics\": set(),\n",
+    "        \"languages\": set([main_language] if main_language != \"\" else []),\n",
+    "        \"stars\": row[\"total_stars\"],\n",
+    "        \"contributors\": row[\"total_contributors\"],\n",
+    "        \"icon\": row[\"avatar_url\"],\n",
+    "        \"description\": row[\"description\"],\n",
+    "    }\n",
+    "    for topic in str.split(row[\"topics\"], \",\"):\n",
+    "        if topic in TAG_MAP:\n",
+    "            repo[\"topics\"].add(TAG_MAP[topic])\n",
+    "        else:\n",
+    "            IGNORED_TAGS[tag] += 1\n",
     "        if key in MANUAL_TAGS:\n",
     "            for tag in MANUAL_TAGS[key]:\n",
     "                repo[\"topics\"].add(tag)\n",
     "\n",
-    "        username = key.split(\"/\")[0]\n",
-    "        if username in users_data:\n",
-    "            repo[\"icon\"] = users_data[username][\"avatar_url\"]\n",
-    "\n",
-    "        for tag in repo[\"topics\"]:\n",
-    "            used_tags.add(tag)\n",
+    "    oss_repos[key] = repo\n",
+    "    used_tags = used_tags.union(repo[\"topics\"])\n",
+    "    used_languages.add(main_language)\n",
     "\n",
     "# Exclude mirrors and other projects that are not contributable projects or unsuitable\n",
-    "del oss_repos[\"gitlabhq/gitlabhq\"]\n",
-    "del oss_repos[\"qemu/qemu\"]\n",
-    "del oss_repos[\"xasset/xasset\"] # Not english.\n",
-    "del oss_repos[\"jynew/jynew\"] # Unity RPG game framework, documentation in chinese-only though.\n",
-    "del oss_repos[\"doocs/advanced-java\"] # Java interview questions, chinese-only.\n",
-    "\n",
-    "for key,repo in oss_repos.items():\n",
-    "    if len(repo[\"topics\"]) == 0:\n",
-    "        print(\"Repo without tags\", f\"https://github.com/{key}\")\n",
-    "\n",
-    "# List unused Github topics\n",
-    "# top_ignored_tags = [(tag, count) for tag, count in IGNORED_TAGS.items()]\n",
-    "# top_ignored_tags = sorted(top_ignored_tags, key=lambda x: x[1], reverse=True)\n",
-    "# print(len(top_ignored_tags))\n",
-    "# print(top_ignored_tags)\n",
+    "BLACKLISTED_REPOS = [\n",
+    "    \"gitlabhq/gitlabhq\", # Read-only mirror.\n",
+    "    \"qemu/qemu\", # Read-only mirror.\n",
+    "    \"xasset/xasset\",# Not english.\n",
+    "    \"jynew/jynew\", # Unity RPG game framework, documentation in chinese-only though.\n",
+    "    \"doocs/advanced-java\", # Chinese-only Java interview questions.\n",
+    "    \"CyC2018/CS-Notes\", # Chinese computer science course resources.\n",
+    "    \"apache/kafka\", # Read-only mirror.\n",
+    "]\n",
+    "for blacklisted_repo in BLACKLISTED_REPOS:\n",
+    "    del oss_repos[blacklisted_repo]\n",
     "\n",
     "# Convert sets to lists for json serialization, and add other\n",
     "# keys the site expects\n",
@@ -332,12 +357,20 @@
     "    repo[\"topics\"] = list(repo[\"topics\"])\n",
     "    repo[\"languages\"] = list(repo[\"languages\"])\n",
     "\n",
-    "with open(\"repositories.json\", \"w\") as f:\n",
+    "# Export the .json\n",
+    "with open(\"repositories_output.json\", \"w\") as f:\n",
     "    json.dump(oss_repos, f, indent=2)\n",
     "\n",
     "print(\"Valid repositories:\", len(oss_repos))\n",
     "print(\"Languages used:\", used_languages)\n",
     "print(\"Tags used:\", used_tags)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Com els repositoris en la base de dades foren principalment trobades per scraping de les pàgines \"trending\" de GitHub, podem concloure que un 50% dels repositoris que GitHub destaca són només repositoris populars de projectes individuals o d'equips petits i no projectes contribuïbles; només uns 1000 repositoris dels 2000 en la base de dades compleixen els requisits que hem imposat."
    ]
   },
   {
