Notebook: simplify DB connection

--- a/JupyterNotebook/analisis_projecte.ipynb
+++ b/JupyterNotebook/analisis_projecte.ipynb
@@ -17,6 +17,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment the following line to install PyMySQL if necessary\n",
+    "#!pip install PyMySQL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -26,12 +36,8 @@
     "%matplotlib inline\n",
     "\n",
     "import pandas as pd\n",
-    "# Uncomment the following line to install pymysql\n",
-    "#!pip install PyMySQL\n",
     "import pymysql\n",
-    "import warnings\n",
-    "\n",
-    "# POLARS # <- teacher said that this one is 1000% faster than pandas."
+    "import warnings"
    ]
   },
   {
@@ -88,9 +94,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# Connexió\n",
     "\n",
-    "TODO index or sections indicating what are we doing..."
+    "Primer de tot, cal connectar-se a la base de dades:"
    ]
   },
   {
@@ -99,34 +105,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://www.geeksforgeeks.org/connect-to-mysql-using-pymysql-in-python/\n",
-    "# Connect to MySQL database\n",
-    "def tryToConnectMySQL(db_name, db_host, db_port, db_username, db_password):\n",
-    "    try:\n",
-    "        conn = pymysql.connect(host=db_host,\n",
-    "                               port=db_port,\n",
-    "                               user=db_username,\n",
-    "                               password=db_password,\n",
-    "                               db=db_name)\n",
-    "        if conn:\n",
-    "            print(\"Connection successful\")\n",
-    "        else:\n",
-    "            print(\"Error\")\n",
-    "        \n",
-    "        return conn\n",
-    "        \n",
-    "    except pymysql.Error as e:        \n",
-    "        warnings.warn(\"Error connecting to MySQL:\", e)\n",
-    "        return None\n",
-    "\n",
-    "# Pass arguments from outside\n",
     "db_name = \"githubProject\"\n",
     "db_host = \"localhost\"\n",
     "db_port = 3306\n",
     "db_username = \"root\"\n",
-    "db_password = input(\"Input your password\")\n",
+    "db_password = input(\"Enter the DB password\")\n",
     "\n",
-    "dataBaseConnection = tryToConnectMySQL(db_name, db_host, db_port, db_username, db_password)"
+    "dataBaseConnection = pymysql.connect(host=db_host,\n",
+    "                            port=db_port,\n",
+    "                            user=db_username,\n",
+    "                            password=db_password,\n",
+    "                            db=db_name)"
    ]
   },
   {
@@ -135,8 +124,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Execute query and return data in pandas dataframe \n",
+    "# Get the cursor to interact with the database\n",
+    "cursor = dataBaseConnection.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def execute_select_query(cursor, query):\n",
+    "    \"\"\"\n",
+    "    Executes a query and returns the results as a pandas dataframe.\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        cursor.execute(query)\n",
     "        output = cursor.fetchall()\n",
@@ -153,16 +154,6 @@
     "        print(\"Error executing query:\")\n",
     "        warnings.warn(str(e))\n",
     "        return None, None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Obtain the cursos in order to interact with the DataBase\n",
-    "cursor = dataBaseConnection.cursor()"
    ]
   },
   {
